rudimentary checkin function implemented

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<thead class="thead ">
 						  <tr>
 							<th scope="col">Name</th>
+							<th scope="col"></th>
 						  </tr>
 						</thead>
 						<tbody id="venuesTableBody">
