--- a/checkIn.html
+++ b/checkIn.html
@@ -18,17 +18,34 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
-		<div class="container">
-			<h4><a href="./index.html">Back to Venues</a></h4>
+		<div id="checkincon">
+			<div class="container">
+				<h4><a href="./index.html">Back to Venues</a></h4>
+			</div>
+			<div class="container">
+				<h1 class="mb-5" >
+					Checkin to <span id="venuename"></span>!
+				</h1>
+			</div>
+	
+			<div class="container">
+				<label for="checkindate">Checkin date:</label>
+				<br>
+	
+				<input type="date" name="checkindate" id="checkindate">
+			</div>
+			<div class="mt-3 mb-4" id="addusercon"></div>
+	
+			<div class="container mt-3">
+				<input onclick="checkIn()" id="submitBtn" type="button" class="btn btn-success " value="Submit">
+				<input onclick="addUser()" id="addUserBtn" type="button" class="btn btn-primary " value="Add User">
+			</div>
 		</div>
-		<div class="container">
-			<h1 class="mb-5" >
-				Checkin to <span id="venuename"></span>!
-			</h1>
+		<div id="successcon" class="container text-center mt-auto" style="display: none;">
+			<h1>Thank you!</h1>
+			<input onclick="window.location.href = './index.html'" type="button" class="btn btn-success mt-5" value="Back to Venues">
 		</div>
 
-
-      	<input onclick="checkIn()" id="submitBtn" type="button" class="btn btn-success " value="Submit">
 
 
 		<script src="./js/checkin.js" async defer></script>
