--- a/checkIn.html
+++ b/checkIn.html
@@ -14,6 +14,13 @@
 			.borderless td, .borderless th {
 				border: none;
 			}
+			.vertical-center {
+				min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+				min-height: 100vh; /* These two lines are counted as one :-)       */
+
+				display: flex;
+				align-items: center;
+			}
 		</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
@@ -41,10 +48,14 @@
 				<input onclick="addUser()" id="addUserBtn" type="button" class="btn btn-primary " value="Add User">
 			</div>
 		</div>
-		<div id="successcon" class="container text-center mt-auto" style="display: none;">
-			<h1>Thank you!</h1>
-			<input onclick="window.location.href = './index.html'" type="button" class="btn btn-success mt-5" value="Back to Venues">
+		
+		<div class="vertical-center">
+			<div id="successcon" class="container text-center" style="display: none;">
+				<h1>Thank you!</h1>
+				<input onclick="window.location.href = './index.html'" type="button" class="btn btn-success mt-5" value="Back to Venues">
+			</div>
 		</div>
+		
 
 
 
