--- a/login.html
+++ b/login.html
@@ -12,32 +12,42 @@
           body {
             padding-top:40px;
           }
+          .vertical-center {
+            min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+            min-height: 100vh; /* These two lines are counted as one :-)       */
+
+            display: flex;
+            align-items: center;
+          }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     </head>
     <body>
-      <div class="container">
-        <h1 class="display-4 mb-4 font-weight-bold">Track and Trace</h1>
-        <h3 class="display-6 mb-4">Please log in or register:</h3>
-        <input type="text" id="username" class="form-control mb-3" placeholder="Type your name...">
+      <div class="vertical-center">
         <div class="container">
-          <input onclick="login()" id="loginbtn" type="button" class="btn btn-primary" value="Login">
-          <span class="m-2">OR</span>
-          <input onclick="registerUser()" id="loginbtn" type="button" class="btn btn-primary" value="Register">
-        </div>
-        <div class="container mt-4">
-          <div class="alert alert-danger" style="display: none;" id="loginerror">
-            Sorry! That username does not exist. Please try again or register.
+          <h1 class="display-4 mb-4 font-weight-bold">Track and Trace</h1>
+          <h3 class="display-6 mb-4">Please log in or register:</h3>
+          <input type="text" id="username" class="form-control mb-3 w-50" placeholder="Type your name...">
+          <div class="container">
+            <input onclick="login()" id="loginbtn" type="button" class="btn btn-primary" value="Login">
+            <span class="m-2">OR</span>
+            <input onclick="registerUser()" id="loginbtn" type="button" class="btn btn-primary" value="Register">
           </div>
-          <div class="alert alert-danger" style="display: none;" id="registererror">
-            Sorry! That username already exists. Please login instead.
-          </div>
-          <div class="alert alert-danger" style="display: none;" id="emptyusererror">
-            Username can't be empty!
+          <div class="container mt-4">
+            <div class="alert alert-danger" style="display: none;" id="loginerror">
+              Sorry! That username does not exist. Please try again or register.
+            </div>
+            <div class="alert alert-danger" style="display: none;" id="registererror">
+              Sorry! That username already exists. Please login instead.
+            </div>
+            <div class="alert alert-danger" style="display: none;" id="emptyusererror">
+              Username can't be empty!
+            </div>
           </div>
         </div>
       </div>
+
 
         <script src="./js/login.js" async defer></script>
     </body>
